--- a/.github/workflows/main_imaginecx-front.yml
+++ b/.github/workflows/main_imaginecx-front.yml
@@ -52,6 +52,9 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
+      - name: Start Node.js Application
+        run: npm start
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
